Improve content (alt text, new cv, mistake in presentation)

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -84,7 +84,7 @@ if (!images[image.path] && image.path != null)
             image.path ? (
                 <Image src={images[image.path]()} alt={image.alt} />
             ) : (
-                <Image src={placeholderImg} alt="Missing image" />
+                <Image src={placeholderImg} alt="Missing content" />
             )
         }
     </figure>
