--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -26,7 +26,9 @@ const emailLink = "mailto:" + email;
     class="flex flex-row flex-wrap w-full p-4 mb-2 bg-white rounded-2xl shadow-lg dark:bg-gray-800"
 >
     <article class="m-2 text-justify xl:flex-[70%]">
-        <h1 class="mb-10 text-3xl font-bold">Who am I? (Boring version)</h1>
+        <h1 class="mb-10 text-3xl font-bold">
+            Who am I? (Boring version until new idea)
+        </h1>
         <p class="mb-5">
             Immersed in the world of computer science from a very young age, I
             quickly became curious to understand the technologies that are part
@@ -34,33 +36,33 @@ const emailLink = "mailto:" + email;
             myself.
         </p>
         <p class="mb-5">
-            That's why I decided to join ISIMA, a French engineering school
-            specialized in computer science after my CPGE at the Edouard Branly
-            high school in Lyon in order to acquire more information and to gain
-            experience to make it my job. These trainings taught me rigor with
-            the help of scientific knowledge like mathematics, industrial
+            That's why, after my CPGE at the Edouard Branly high school in Lyon,
+            I decided to join ISIMA, a French engineering school specialized in
+            computer science, to get more information and experience to make it
+            my profession. These preparatory courses taught me rigor with the
+            help of scientific knowledge such as mathematics, industrial
             sciences, physics and, of course, computer science.
         </p>
         <p class="mb-5">
-            My engineering studies have allowed me to acquire skills in C, C++,
-            C# (.NET), Java and SQL which completes my knowledge acquired as a
-            self-taught person, such as Python, HTML, CSS as well as some PHP.
-            Finally, I use GNU/Linux and Windows operating systems.
+            My engineering studies allowed me to acquire skills in C, C++, C#
+            (.NET), Java and SQL, which complement my self-taught skills in
+            Python, HTML, CSS and Rust. Finally, I use GNU/Linux and Windows
+            operating systems.
         </p>
         <p class="mb-5">
-            I then had the opportunity to do a double cursus in the University
-            of Oklahoma thanks to my motivation to succeed. I discovered a new
+            Then, thanks to my motivation to succeed, I had the opportunity to
+            do a double degree at the University of Oklahoma. I discovered a new
             way of learning and a new culture.
         </p>
         <p class="mb-5">
             Besides my passion for technology, I also enjoy mountain biking,
             skiing and billiards (Blackball/Snooker/9-ball). In my free time, I
-            also like to watch movies and series... and cat pictures of course.
-            By the way, I also started playing violin at the age of 4 and
+            also like to watch movies and series... and of course cat pictures.
+            By the way, I also started playing the violin at the age of 4 and
             traveled a lot.
         </p>
         <p class="mb-5">
-            Finally, I studied three languages in addition of French (my native
+            Finally, I studied three languages in addition to French (my native
             language): English (C1), Spanish (B1) and Mandarin (notions).
         </p>
     </article>
@@ -71,7 +73,7 @@ const emailLink = "mailto:" + email;
             <Image
                 class="block w-32 h-auto mt-14 mb-0 mx-auto rounded-2xl"
                 src={profilePic}
-                alt="Picture of me"
+                alt="Portrait of me"
             />
         </div>
         <div class="p-4 mt-4 text-center">
