--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -17,6 +17,7 @@ const { title, description } = Astro.props;
         <meta charset="utf-8" />
         <meta name="description" content={description} />
         <meta name="viewport" content="width=device-width" />
+        <meta name="fediverse:creator" content="@TristanB0@floss.social" />
         <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
