Update some stuff

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const allPosts = Object.values(
 
 const title = "Tristan Bony - Software Engineer";
 const description =
-    "Welcome to Tristan's personal website! You will find my different projects and past experiences.";
+    "Hello! I'm Tristan, this is my personal website. Here, you will find my different projects and past experiences.";
 ---
 
 <GlobalLayout title={title} description={description}>
