--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -27,12 +27,12 @@ const blogLink = "https://blog.tristanbony.me";
     class="flex flex-row flex-wrap w-full p-4 mb-2 bg-white rounded-2xl shadow-lg dark:bg-gray-800"
 >
     <article class="m-2 xl:flex-[70%]">
-        <h1 class="mb-10 text-3xl font-bold">
+        <h1 class="mb-10 text-2xl md:text-3xl">
             <pre
-                class="inline text-green-500 dark:text-green-400 font-bold">tristan@website:~${'>'}</pre>
+                class="inline text-green-500 dark:text-green-400 font-bold">tristan@website:~$</pre>
             <pre class="inline text-blue-500 dark:text-blue-400">whoami</pre>
         </h1>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="grid grid-cols-1 w-full mb-4 md:grid-cols-2 gap-6">
             <div
                 class="bg-gray-100 rounded-2xl p-6 border-l-4 border-sky-400 shadow-md dark:bg-gray-900"
             >
@@ -66,10 +66,10 @@ const blogLink = "https://blog.tristanbony.me";
             </div>
 
             <div
-                class="bg-gray-100 rounded-2xl p-6 border-l-4 border-red-400 shadow-md dark:bg-gray-900"
+                class="bg-gray-100 rounded-2xl p-6 border-l-4 border-rose-400 shadow-md dark:bg-gray-900"
             >
-                <h3 class="text-xl font-semibold text-red-400">Interests</h3>
-                <ul class="pl-4 list-disc marker:text-red-400">
+                <h3 class="text-xl font-semibold text-rose-400">Interests</h3>
+                <ul class="pl-4 list-disc marker:text-rose-400">
                     <li>
                         <b>Sports</b>: Mountain Biking, Skiing, Billards
                         (Blackball/Snooker/9-ball)
