--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -27,17 +27,17 @@ const blogLink = "https://blog.tristanbony.me";
     class="flex flex-row flex-wrap w-full p-4 mb-2 bg-white rounded-2xl shadow-lg dark:bg-gray-800"
 >
     <article class="m-2 xl:flex-[70%]">
-        <h1 class="mb-10 text-2xl md:text-3xl">
+        <h1 class="mb-4 text-2xl md:text-3xl">
             <pre
                 class="inline text-green-500 dark:text-green-400 font-bold">tristan@website:~$</pre>
             <pre class="inline text-blue-500 dark:text-blue-400">whoami</pre>
         </h1>
-        <div class="grid grid-cols-1 w-full mb-4 md:grid-cols-2 gap-6">
+        <div class="grid grid-cols-1 w-full mb-4 gap-4 md:grid-cols-2 md:mb-0">
             <div
-                class="bg-gray-100 rounded-2xl p-6 border-l-4 border-sky-400 shadow-md dark:bg-gray-900"
+                class="bg-gray-100 p-6 rounded-2xl shadow-lg border-l-4 border-sky-400 dark:bg-gray-900"
             >
                 <h3 class="text-xl font-semibold text-sky-400">Tech Skills</h3>
-                <ul class="pl-4 list-disc marker:text-sky-400">
+                <ul class="list-disc pl-4 marker:text-sky-400">
                     <li>
                         <b>Taught</b>: C, C++, C# (.NET), Java, SQL, JS (React)
                     </li>
@@ -52,10 +52,10 @@ const blogLink = "https://blog.tristanbony.me";
             </div>
 
             <div
-                class="bg-gray-100 rounded-2xl p-6 border-l-4 border-lime-400 shadow-md dark:bg-gray-900"
+                class="bg-gray-100 p-6 rounded-2xl shadow-lg border-l-4 border-lime-400 dark:bg-gray-900"
             >
                 <h3 class="text-xl font-semibold text-lime-400">Education</h3>
-                <ul class="pl-4 list-disc marker:text-lime-400">
+                <ul class="list-disc pl-4 marker:text-lime-400">
                     <li>
                         <b>CPGE TSI</b> - Strong foundation in Mathematics, Physics,
                         and Industrial Sciences
@@ -66,10 +66,10 @@ const blogLink = "https://blog.tristanbony.me";
             </div>
 
             <div
-                class="bg-gray-100 rounded-2xl p-6 border-l-4 border-rose-400 shadow-md dark:bg-gray-900"
+                class="bg-gray-100 p-6 rounded-2xl shadow-lg border-l-4 border-rose-400 dark:bg-gray-900"
             >
                 <h3 class="text-xl font-semibold text-rose-400">Interests</h3>
-                <ul class="pl-4 list-disc marker:text-rose-400">
+                <ul class="list-disc pl-4 marker:text-rose-400">
                     <li>
                         <b>Sports</b>: Mountain Biking, Skiing, Billards
                         (Blackball/Snooker/9-ball)
@@ -83,16 +83,16 @@ const blogLink = "https://blog.tristanbony.me";
                     </li>
                     <li><b>Travels:</b>USA, Europe, Russia, and many others</li>
                     <li>
-                        <b>Other</b>: Movies, Series, Cat lover, FLOSS, Cars
+                        <b>Other</b>: Movies, Series, Cats, FLOSS, Cars
                     </li>
                 </ul>
             </div>
 
             <div
-                class="bg-gray-100 rounded-2xl p-6 border-l-4 border-amber-400 shadow-md dark:bg-gray-900"
+                class="bg-gray-100 p-6 rounded-2xl shadow-lg border-l-4 border-amber-400 dark:bg-gray-900"
             >
                 <h3 class="text-xl font-semibold text-amber-400">Languages</h3>
-                <ul class="pl-4 list-disc marker:text-amber-400">
+                <ul class="list-disc pl-4 marker:text-amber-400">
                     <li><b>French</b>: Native</li>
                     <li><b>English</b>: C1 (TOEFL: 99/120, TOEIC: 975/990)</li>
                     <li><b>Spanish</b>: B1</li>
