--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -120,6 +120,7 @@ const blogLink = "https://blog.tristanbony.me";
                         Tristan Bony, {age}
                         <span class="italic">(he/him) </span>
                         <Icon name="france" size={24} class="inline" />
+                        <Icon name="eu" size={24} class="inline" />
                     </span>
                 </li>
                 <li>
