Add a game to my presentation and linux distrib

--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -44,7 +44,7 @@ const blogLink = "https://blog.tristanbony.me";
                     <li>
                         <b>Self-learned</b>: Python, HTML, CSS, JS (Astro), Rust
                     </li>
-                    <li><b>OS</b>: GNU/Linux, Windows</li>
+                    <li><b>OS</b>: EndeavourOS, Fedora Kinoite, Windows</li>
                     <li>
                         <b>Tools</b>: Git (GitHub, GitLab, Bitbucket), Docker
                     </li>
@@ -79,7 +79,8 @@ const blogLink = "https://blog.tristanbony.me";
                         Rock band
                     </li>
                     <li>
-                        <b>Video Games</b>: Portal, Trackmania, Rocket League
+                        <b>Video Games</b>: Portal, Trackmania, Rocket League,
+                        Cyberpunk 2077
                     </li>
                     <li>
                         <b>Travels</b>: USA, Europe, Russia, and many others
