--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -44,9 +44,9 @@ const blogLink = "https://blog.tristanbony.me";
                     <li>
                         <b>Self-learned</b>: Python, HTML, CSS, JS (Astro), Rust
                     </li>
-                    <li><b>OS</b>: EndeavourOS, Fedora Kinoite, Windows</li>
+                    <li><b>OS</b>: CachyOS w/ COSMIC, Bazzite w/ KDE</li>
                     <li>
-                        <b>Tools</b>: Git (GitHub, GitLab, Bitbucket), Docker
+                        <b>Tools</b>: Git (GitHub, GitLab, Bitbucket), Docker, Azure
                     </li>
                 </ul>
             </div>
